# x-server

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conf.default.json  config.h.cmake
cmake/: googletestConfig.cmake  multilplexing.cmake  spdlogConfig.cmake
include/: argparse.h  const.h  except.h  globals.h
include/http/: common.h  conn.h  handler.h  request.h  server.h
include/http/handler/: delete.h  get.h  post.h  put.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  conf.c  conf.h  conn.c  conn.h  ctrl.h  main.c  main.cc  req.c  req.h  resp.c  resp.h
src/argparse/: CMakeLists.txt  argparse.cc
src/conf/: CMakeLists.txt  conf.c  conf.h
src/http/: CMakeLists.txt  conn.c  conn.cc  req.c  req.h  request.cc  resp.c  resp.h  server.cc  server_epoll.cc  server_kqueue.cc  server_select.cc  server_serially.cc
src/http/handler/: delete.cc  get.cc  post.cc  put.cc
src/log/: log.h
test/: CMakeLists.txt
test/argparse/: CMakeLists.txt  argparse_test.cc
test/http/: CMakeLists.txt  conn_test.cc
